--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="pg-body">
 	<div class="ui-row"><label>充值账户：</label>9999</div>
 	<div class="ui-row"><label>当前余额：</label>￥99.9</div>
-	<div class="ui-row"><input class="input" type="text" placeholder="充值金额"></div>
+	<div class="ui-row"><input style="position: relative;" class="input" type="text" placeholder="充值金额1"></div>
+	<div class="ui-row" style="position: relative;"><input class="input" type="text" placeholder="充值金额2"></div>
+	<div class="ui-row" style="width: 100%;"><input class="input" type="text" placeholder="充值金额3"></div>
+	<div class="ui-row" style="padding: 1px;"><input class="input" type="text" placeholder="充值金额4"></div>
 	<div class="ui-hr"></div>
             </div>
         </div>
