--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 	
     <body>
         <div class="my-app">
-<div class="pg-toolbar">
-    <a class="toolbar-link" href="javascript:history.back()"></a>
-    <div class="toolbar-title">充值</div>
-    <div class="toolbar-actions"></div>
-</div>
-            <div class="pg-body">
-	<div class="ui-row"><label>充值账户：</label>9999</div>
-	<div class="ui-row"><label>当前余额：</label>￥99.9</div>
-	<div class="ui-row"><input style="position: relative;" class="input" type="text" placeholder="充值金额1"></div>
-	<div class="ui-row" style="position: relative;"><input class="input" type="text" placeholder="充值金额2"></div>
-	<div class="ui-row" style="width: 100%;"><input class="input" type="text" placeholder="充值金额3"></div>
-	<div class="ui-row" style="padding: 1px;"><input class="input" type="text" placeholder="充值金额4"></div>
-	<div class="ui-hr"></div>
-            </div>
+			<div class="pg-toolbar">
+				<a class="toolbar-link" href="javascript:history.back()"></a>
+				<div class="toolbar-title">充值</div>
+				<div class="toolbar-actions"></div>
+			</div>
+			<div class="pg-body" style="overflow: hidden;">
+				<div class="ui-row"><label>充值账户：</label>9999</div>
+				<div class="ui-row"><label>当前余额：</label>￥99.9</div>
+				<div class="ui-row"><input style="position: relative;" class="input" type="text" placeholder="充值金额1"></div>
+				<div class="ui-row" style="position: relative;"><input class="input" type="text" placeholder="充值金额2"></div>
+				<div class="ui-row" style="width: 100%;"><input class="input" type="text" placeholder="充值金额3"></div>
+				<div class="ui-row" style="padding: 1px;"><input class="input" type="text" placeholder="充值金额4"></div>
+				<div class="ui-hr"></div>
+			</div>
         </div>
 </body></html>
