--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="./files/webMall.css" media="screen">
 	
     <body>
-        <div class="my-app">
+        <div class="my-app" style="width: 100%;">
 			<div class="pg-toolbar">
 				<a class="toolbar-link" href="javascript:history.back()"></a>
 				<div class="toolbar-title">充值</div>
 				<div class="toolbar-actions"></div>
 			</div>
-			<div class="pg-body" style="overflow: hidden;width: 100%;">
+			<div class="pg-body" style="overflow: hidden;">
 				<div class="ui-row"><label>充值账户：</label>9999</div>
 				<div class="ui-row"><label>当前余额：</label>￥99.9</div>
 				<div class="ui-row"><input style="position: relative;" class="input" type="text" placeholder="充值金额1"></div>
