--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="./files/webMall.css" media="screen">
 	
     <body>
-        <div class="my-app" style="width: 100%;">
+        <div class="my-app">
 			<div class="pg-toolbar">
 				<a class="toolbar-link" href="javascript:history.back()"></a>
 				<div class="toolbar-title">充值</div>
