--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<div class="ui-row" style="position: relative;"><input class="input" type="text" placeholder="充值金额2"></div>
 				<div class="ui-row" style="width: 100%;"><input class="input" type="text" placeholder="充值金额3"></div>
 				<div class="ui-row" style="padding: 1px;"><input class="input" type="text" placeholder="充值金额4"></div>
+				<div class="ui-row"><input style="margin: 1px;" class="input" type="text" placeholder="充值金额5"></div>
 				<div class="ui-hr"></div>
 			</div>
         </div>
