--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="toolbar-title">充值</div>
 				<div class="toolbar-actions"></div>
 			</div>
-			<div class="pg-body" style="overflow: hidden;">
+			<div class="pg-body" style="overflow: hidden;padding: 0;">
 				<div class="ui-row"><label>充值账户：</label>9999</div>
 				<div class="ui-row"><label>当前余额：</label>￥99.9</div>
 				<div class="ui-row"><input style="position: relative;" class="input" type="text" placeholder="充值金额1"></div>
