--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				<div class="toolbar-actions"></div>
 			</div>
 			<div class="pg-body">
-				<div class="ui-row"><label>充值账户：</label>${Session.pay_user_cn!""}</div>
-				<div class="ui-row"><label>当前余额：</label><span class="ui-money-color">￥${(user.money!0)?string("0.00")}</span></div>
+				<div class="ui-row"><label>充值账户：</label>qq.com</div>
+				<div class="ui-row"><label>当前余额：</label><span class="ui-money-color">￥500</span></div>
 				<div class="ui-row"><input class="input" type="text" placeholder="充值金额"/></div>
 				<div class="ui-hr"></div>
 				<div class="ui-row ui-row-note">充值即时到账，无需手续费</div>
