--- a/index.html
+++ b/index.html
@@ -9,52 +9,55 @@
 	
     <body>
         <div class="my-app">
-			<div class="pg-toolbar">
-				<a class="toolbar-link" href="javascript:history.back()"></a>
-				<div class="toolbar-title">充值</div>
-				<div class="toolbar-actions"></div>
-			</div>
-			<div class="pg-body">
-				<div class="ui-row"><label>充值账户：</label>qq.com</div>
-				<div class="ui-row"><label>当前余额：</label><span class="ui-money-color">￥500</span></div>
-				<div class="ui-row"><input class="input" type="text" placeholder="充值金额"/></div>
-				<div class="ui-hr"></div>
-				<div class="ui-row ui-row-note">充值即时到账，无需手续费</div>
-				<ul class="choice-list">
-					<li class="c-item">
-						<a>
-							<div class="c-content">
-								<i class="icon-alipay"></i>
-								<span>支付宝网页支付</span>
-							</div>
-							<div class="c-arrow">
-								<i class="icon-arrow-right"></i>
-							</div>
-						</a>
-					</li>
-					<li class="c-item">
-						<a>
-							<div class="c-content">
-								<i class="icon-alipay"></i>
-								<span>支付宝客户端支付</span>
-							</div>
-							<div class="c-arrow">
-								<i class="icon-arrow-right"></i>
-							</div>
-						</a>
-					</li>
-					<li class="c-item">
-						<a>
-							<div class="c-content">
-								<i class="icon-unionpay"></i>
-								<span>银联</span>
-							</div>
-							<div class="c-arrow">
-								<i class="icon-arrow-right"></i>
-							</div>
-						</a>
-					</li>
-				</ul>
-			</div>
+<div class="pg-toolbar">
+    <a class="toolbar-link" href="javascript:history.back()"></a>
+    <div class="toolbar-title">充值</div>
+    <div class="toolbar-actions"></div>
+</div>
+            <div class="pg-body">
+	<div class="ui-row"><label>充值账户：</label>vance_1988@changyou.com</div>
+	<div class="ui-row"><label>当前余额：</label><span class="ui-money-color">￥1000.10</span></div>
+	<div class="ui-row"><input class="input" type="text" placeholder="充值金额"></div>
+	<div class="ui-hr"></div>
+	<div class="ui-row ui-row-note">充值即时到账，无需手续费</div>
+	<ul class="choice-list">
+		<li class="c-item">
+			<a>
+				<div class="c-content">
+					<i class="icon-alipay"></i>
+					<strong>支付宝网页支付</strong>
+					<span class="sub">每笔限额2000元</span>
+				</div>
+				<div class="c-arrow">
+					<i class="icon-arrow-right"></i>
+				</div>
+			</a>
+		</li>
+		<li class="c-item">
+			<a>
+				<div class="c-content">
+					<i class="icon-alipay"></i>
+					<strong>支付宝客户端支付</strong>
+					<span class="sub">每笔限额2000元</span>
+				</div>
+				<div class="c-arrow">
+					<i class="icon-arrow-right"></i>
+				</div>
+			</a>
+		</li>
+		<li class="c-item">
+			<a>
+				<div class="c-content">
+					<i class="icon-unionpay"></i>
+					<strong>银联支付</strong>
+					<span class="sub">每笔限额500元，日限额2000元</span>
+				</div>
+				<div class="c-arrow">
+					<i class="icon-arrow-right"></i>
+				</div>
+			</a>
+		</li>
+	</ul>
+            </div>
         </div>
 </body></html>
