--- a/index.html
+++ b/index.html
@@ -1,69 +1,60 @@
+
+
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta charset="utf-8">
+<html>
+    <head>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="mobileOptimized" content="320">
-    <title>充值</title>
-	<link rel="stylesheet" type="text/css" href="./files/webMall.css" media="screen">
-	
+	<meta name="mobileOptimized" content="240">
+
+
+    <title>帮助中心_17173商城--官方线下交易平台</title>
+	<meta name="author" content="Design: WuChunXue; FED: JiangZhiDe Maple">
+	<meta name="Keywords" content="17173商城,金币交易,卡牌交易,手游,安全交易" />
+	<meta name="Description" content="17173商城" />
+	<link rel="stylesheet" type="text/css" href="./files/webMall.css?v20140318" media="screen" />
+	<script type="text/javascript">var BASE_PATH = "http://10.12.14.138:3000"; var PUBLIC_PATH = "http://10.12.14.138:3000/static";</script>    </head>
     <body>
-<div class="my-app">
-<div class="pg-toolbar">
-    <a class="toolbar-link" href="javascript:history.back()"></a>
-    <div class="toolbar-title">充值</div>
-    <div class="toolbar-actions"></div>
+        <div class="my-app">
+	<div class="pg-toolbar">
+	    <a class="toolbar-link" href="javascript:history.back()"></a>
+	    <div class="toolbar-title" >使用帮助</div>
+	    <div class="toolbar-actions" ></div>
+	</div>
+	<h2 class="help-sub-title">购买流程</h2>
+
+<div class="pg-body pg-body-help">
+	<dl class="help-list">
+		<dt>
+			<span class="help-step"><i class="num">1</i></span>挑选商品
+		</dt>
+		<dd>
+			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
+		</dd>
+		<dt>
+			<span class="help-step"><i class="num">2</i></span>挑选商品
+		</dt>
+		<dd>
+			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
+		</dd>
+		<dt>
+			<span class="help-step"><i class="num">3</i></span>挑选商品
+		</dt>
+		<dd>
+			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
+		</dd>
+		<dt>
+			<span class="help-step"><i class="num">4</i></span>游戏领取
+		</dt>
+		<dd>
+			支付成功后，我们会将您购买的商品发送到游戏，系统会给您的畅易阁账号发送消息，请注意查收。 角色领取：直接登录游戏，选择正确服务器后，在角色选择环节直接选中您购买的角色既可开始游戏。
+		</dd>
+	</dl>
 </div>
-            <div class="pg-body">
-	<div class="ui-row"><label>充值账户：</label>vance_1988@changyou.com</div>
-	<div class="ui-row"><label>当前余额：</label><span class="ui-money-color">￥1000.10</span></div>
-	<div class="ui-row"><input class="input" type="text" placeholder="充值金额"></div>
-	<div class="ui-hr"></div>
-	<div class="ui-row ui-row-note">充值即时到账，无需手续费</div>
-	<ul class="choice-list">
-		<li class="c-item">
-			<a>
-				<div class="c-icon">
-					<i class="icon-alipay"></i>
-				</div>
-				<div class="c-content">
-					<strong>支付宝网页支付</strong>
-					<p class="sub">每笔限额2000元</p>
-				</div>
-				<div class="c-arrow">
-					<i class="icon-arrow-right"></i>
-				</div>
-			</a>
-		</li>
-		<li class="c-item">
-			<a>
-				<div class="c-icon">
-					<i class="icon-alipay"></i>
-				</div>
-				<div class="c-content">
-					<strong>支付宝客户端支付</strong>
-					<p class="sub">每笔限额2000元</p>
-				</div>
-				<div class="c-arrow">
-					<i class="icon-arrow-right"></i>
-				</div>
-			</a>
-		</li>
-		<li class="c-item">
-			<a>
-				<div class="c-icon">
-					<i class="icon-unionpay"></i>
-				</div>
-				<div class="c-content">
-					<strong>银联支付</strong>
-					<p class="sub">每笔限额500元，日限额2000元</p>
-				</div>
-				<div class="c-arrow">
-					<i class="icon-arrow-right"></i>
-				</div>
-			</a>
-		</li>
-	</ul>
-            </div>
         </div>
-</body></html>
+
+
+
+    </body>
+</html>
