--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 <div class="pg-body pg-body-help">
 	<dl class="help-list">
 		<dt>
-			<span class="help-step"><i class="num">1</i></span>挑选商品
+			<span class="help-step"><i class="icon-num icon-num1">1</i></span>挑选商品
 		</dt>
 		<dd>
 			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
 		</dd>
 		<dt>
-			<span class="help-step"><i class="num">2</i></span>挑选商品
+			<span class="help-step"><i class="icon-num icon-num2">2</i></span>挑选商品
 		</dt>
 		<dd>
 			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
 		</dd>
 		<dt>
-			<span class="help-step"><i class="num">3</i></span>挑选商品
+			<span class="help-step"><i class="icon-num icon-num3">3</i></span>挑选商品
 		</dt>
 		<dd>
 			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
 		</dd>
 		<dt>
-			<span class="help-step"><i class="num">4</i></span>游戏领取
+			<span class="help-step"><i class="icon-num icon-num4">4</i></span>游戏领取
 		</dt>
 		<dd>
 			支付成功后，我们会将您购买的商品发送到游戏，系统会给您的畅易阁账号发送消息，请注意查收。 角色领取：直接登录游戏，选择正确服务器后，在角色选择环节直接选中您购买的角色既可开始游戏。
