--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
 		</dd>
 		<dt>
-			<span class="help-step"><i class="icon-num icon-num3">3</i></span>挑选商品
+			<span class="help-step"><i class="icon-num icon-num3">3</i><i class="icon-num icon-num3">3</i></span>挑选商品
 		</dt>
 		<dd>
 			您可以优先进入畅易阁天龙八部站的交易中心，在商品列表中点击了解商品详情后，直接下订单购买。其中，浏览商品信息无需登录，当有创建订单、购买商品、管理商品、修改价格的操作时，需要凭畅游通行证（密保）登录网站。
